--- a/app/globals.css
+++ b/app/globals.css
@@ -1,104 +1,208 @@
 :root {
   --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
+  --default-rgb: 255, 255, 255;
+  --vid-overlay: 0, 0, 0, 1;
   --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+  --h1: 40px; /* H1 Font Size */
+  --h1-big: 5em;
+  --h1-small: 2em;
+  --h2: 40px; /* H2 Font Size */
+   /* H3 Font Size */
+  --h4: 40px; /* H4 Font Size */
+  --p: 1.1em;  /* P Font Size */
+  --cta: 0.875em;
 
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  --txt-black: #000;
+  --snow-bg: #FFF;
+  
+  --cta-anim-black: #000;
+  --cta-txt-white: #FFF;
+  --transition-speed: 0.4s; 
+  --transition-quint: all 0.3s cubic-bezier(0.85, 0, 0.15, 1);
+  --transition-quart: all 0.3s cubic-bezier(0.76, 0.00, 0.24, 1); 
+}
+/*  */
+
+/* Haffer Fonts */
+@font-face {
+  font-family: haffer-B;
+  src: local('haffer-B'), url('/fonts/Haffer-Bold.woff2') format('woff2');
+}
+.haffer-M { /* Haffer Bold */
+  font-family: haffer-B;
+}
+@font-face {
+  font-family: haffer-SB;
+  src: local('haffer-SB'), url('/fonts/Haffer-SemiBold.woff2') format('woff2');
+}
+.haffer-M { /* Haffer SemiBold */
+  font-family: haffer-SB;
+}
+@font-face {
+  font-family: haffer-H;
+  src: local('haffer-H'), url('/fonts/Haffer-Heavy.woff2') format('woff2');
+}
+.haffer-H {  /* Haffer Heavy */
+  font-family: haffer-H;
+}
+@font-face {
+  font-family: haffer-M;
+  src: local('haffer-M'), url('/fonts/Haffer-Medium.woff2') format('woff2');
+}
+.haffer-M { /* Haffer Medium */
+  font-family: haffer-M;
+}
+@font-face {
+  font-family: haffer-R;
+  src: local('haffer-R'), url('/fonts/Haffer-Regular.woff2') format('woff2');
+}
+.haffer-M { /* Haffer Regular */
+  font-family: haffer-R;
+}
+@font-face {
+  font-family: haffer-L;
+  src: local('haffer-L'), url('/fonts/Haffer-Light.woff2') format('woff2');
+}
+.haffer-L { /* Haffer Light */
+  font-family: haffer-L;
+}
+/* Haffer Fonts End */
+
+/* Global Font Sizes */
+.h1-small {
+  font-size: var(--h1-small);
+}
+.h1-big {
+  font-size: var(--h1-big);
+}
+.p-tag {
+  font-size: var(--p);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+/* Global Font Sizes End */
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+/* CTA Properties */
+.cta{
+  position: relative;
+  font-size: var(--cta);
+  color: black;
+  padding: 0.6em 0.35em 0.6em 0.2em;
+  transition: var(--transition-quint);
+  transition-delay: 500ms;
+  z-index: 200;
 }
+.cta::before {
+  /* CTA BACKGROUND */
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0;
+  background: var(--cta-anim-black);
+  z-index: -1;
+  transition: var(--transition-quint);
+  transition-delay: 500ms;
+}
+.cta:hover.cta::before {
+  /* CTA BACKGROUND */
+  width: 100%;
+  height: 100%;
+  transition: var(--transition-quint);
+}
+.cta > p {
+  position: relative;
+}
+.cta > p::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 1px;
+  width: 0;
+  background: var(--snow-bg);
+  transition: var(--transition-quart);
+  /* transition-delay: 500ms; */
+}
+.cta:hover.cta > p::after {
+  /* CTA UnderLine */
+  width: 100%;
+  transition: var(--transition-quart);
+  transition-delay: 500ms;
+}
+
+.cta:hover {
+  color: #FFF;
+  z-index: 200;
+  transition: var(--transition-quint);
+}
+.cta-arrow {
+  position: relative;
+  background: var(--snow-bg);
+  transition: var(--transition-quart);
+  transform: translateX(-120%);
+  transition-delay: 300ms;
+}
+.cta-arrow-A {
+  position: absolute;
+  height: 6px;
+  width: 6px;
+  border: 2px #FFF solid;
+  border-bottom: none;
+  border-left: none;
+  top: -120%;
+  right: 5%;
+  transform: rotate(45deg) translate(0%, -2%);
+}
+.cta:hover .cta-arrow {
+  transform: translateX(-10%);
+  transition-delay: 800ms;
+}
+.cta-prop {
+  position: relative;
+  width: fit-content;
+  transition: all var(--transition-speed) ease;
+}
+
+/* CTA Properties End */
+
+/* Background & Text Color */
+.snow {
+  background: var(--snow-bg);
+}
+.black-txt {
+  color: #000;
+}
+/* Background & Text Color End */
+
+/* States and Transition */
+
+/* States and Transition End */
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
-
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-size: 1vw;
 }
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: rgb(var(--default-rgb));
 }
-
 a {
   color: inherit;
   text-decoration: none;
 }
+h1,h2,h3,h4 {
+  font-weight: 400;
+}
+/* h3 {
+  font-size: var(--h3);
+} */
 
 @media (prefers-color-scheme: dark) {
   html {
