--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,7 @@
   --cta: 0.875em;
 
   --txt-black: #000;
+  --txt-white: #FFF;
   --snow-bg: #FFF;
   --black-bg: #000;
   
@@ -25,6 +26,18 @@
   --quart: cubic-bezier(0.76, 0.00, 0.24, 1);
 }
 /*  */
+
+/* Background & Text Color */
+.snow {
+  background: var(--snow-bg);
+}
+.black-txt {
+  color: #000;
+}
+.snow-txt {
+  color: var(--txt-white);
+}
+/* Background & Text Color End */
 
 /* Haffer Fonts */
 @font-face {
@@ -261,7 +274,6 @@
 }
 .cursor-A-text-u-active {
   position: relative;
-
 }
 .cursor-A-arrow-wrapper {
   overflow: hidden;
@@ -277,23 +289,11 @@
   transition: var(--transition-quint);
   transition-delay: 1000ms;
 }
-
-
-
+/* Cursor-A End */
 /* CTA Properties End */
 
-/* Background & Text Color */
-.snow {
-  background: var(--snow-bg);
-}
-.black-txt {
-  color: #000;
-}
-/* Background & Text Color End */
 
-/* States and Transition */
 
-/* States and Transition End */
 
 * {
   box-sizing: border-box;
@@ -316,9 +316,6 @@ a {
 h1,h2,h3,h4 {
   font-weight: 400;
 }
-/* h3 {
-  font-size: var(--h3);
-} */
 
 @media (prefers-color-scheme: dark) {
   html {
