--- a/app/styles/Works/works.css
+++ b/app/styles/Works/works.css
@@ -1,6 +1,7 @@
 :root {
     --side-padding: 2em;
-    --transition-quint: all 0.8s cubic-bezier(0.85, 0, 0.15, 1);
+    --transition-quint: all 0.6s cubic-bezier(0.85, 0, 0.15, 1);
+    --transition-quart: all 0.6s cubic-bezier(0.76, 0.00, 0.24, 1); 
 }
 
 .work {
@@ -130,3 +131,65 @@
     letter-spacing: -0.022rem;
 }
 /* Works Vision End */
+
+/* Behind the scene */
+.b-scene {
+    padding: 2rem var(--side-padding) 2rem var(--side-padding);
+}
+.b-scene-border {
+    border-top: 1px #000 solid;
+    border-bottom: 1px #000 solid;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    padding: 2rem 0 2rem 0;
+    height: 100vh;
+
+}
+.b-scene-title {
+    z-index: 100;
+    /* background: rgba(255, 255, 255, 0.01); */
+}
+.b-scene-title > h1 {
+    text-align: center;
+    font-size: 6.25em;
+}
+.b-scene-cta {
+    border-bottom: 1px black solid;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    transition: var(--transition-quint);
+    z-index: 10;
+}
+.b-scene-cta::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    background: #000;
+    z-index: -1;
+    width: 100%;
+    height: 0;
+    transition: var(--transition-quint);
+}
+.b-scene-cta:hover.b-scene-cta::after {
+    height: 100%;
+}
+.b-scene-cta-text {
+    padding: 0.8em 0 0.8em 0;
+    transition: var(--transition-quart);
+    color: #000;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.b-scene-cta:hover .b-scene-cta-text{
+    color: #FFF;
+}
+/* Behind the scene end */
