--- a/app/styles/Home/home.css
+++ b/app/styles/Home/home.css
@@ -158,6 +158,11 @@
 .fw-showcase-item-link {
     cursor: none;
 }
+/* Featured Works Mob */
+.fw-showcase-item-wrapper-mob {
+    display: none;
+}
+/* Featured Works Mob End */
 /* Featured Works end */
 
 /* News Showcase */
@@ -219,11 +224,17 @@
 .news-showcase-item:hover .news-showcase-item-overlay {
     background: rgba(0, 0, 0, 0);
 }
+/* News Mobile */
+.news-showcase-item-wrapper-mob {
+    display: none;
+}
+/* News Mobile End */
 /* News Showcase End */
 
 /* Contact Showcase */
 .c-showcase {
     padding: 2rem var(--side-padding) 2rem var(--side-padding);
+    font-size: 1rem;
     width: 100%;
 }
 .c-showcase-border {
@@ -292,17 +303,19 @@
 
 
 @media(max-width: 780px) {
+   
     .home-hero  {
         font-size: 3rem;
-        padding: 80rem 2rem 18rem 2rem;
+        padding: 80rem 3rem 18rem 3rem;
     }
     .home-hero-title {
         width: 85%;
     }
 
+    /* Home Brief */
     .home-brief {
         font-size: 3rem;
-        padding: 8rem var(--side-padding) 4rem var(--side-padding);
+        padding: 8rem 3rem 4rem 3rem;
     }
     .home-brief-wrapper {
         flex-direction: column;
@@ -314,4 +327,73 @@
     .home-brief-desc-wrapper {
         width: 90%;
     }
+
+    /* Featured Works */
+    .fw-showcase {
+        font-size: 3rem;
+        padding: 5rem 0 2rem 3rem;
+    }
+    .eyebrow-cta {
+        display: none;
+    }
+    .fw-showcase-item-wrapper {
+        display: none;
+    }
+    .fw-showcase-item-wrapper-mob {
+        display: block;
+        margin: 2em 0;
+    }
+    .fw-showcase-item {
+        width: 100%;
+    }
+    .fw-showcase-item-text-wrapper {
+        position: relative;
+        bottom: -5%;
+    }
+    
+    /* News and Insights */
+    .news-showcase {
+        font-size: 3rem;
+        padding: 5rem 0 2rem 2rem;
+    }
+    .news-showcase-item-wrapper {
+        display: none;
+    }
+    .news-showcase-item-wrapper-mob {
+        display: flex;
+        margin: 2em 0;
+    }
+    .news-showcase-item-text {
+        transform: translateY(0);
+    }
+
+    /* Contact Showcase */
+    .c-showcase {
+        font-size: 3rem;
+        padding: 5rem 1rem 5rem 1rem;
+    }
+    .c-showcase-title-wrapper {
+        width: 100%;
+        padding: 0 1rem;
+        text-align: left;
+    }
+    .c-showcase-title-wrapper > div > h1 {
+        letter-spacing: -0.55rem;
+    }
+    .c-showcase-info-wrapper {
+        flex-direction: column;
+        padding: 0 1rem;
+        /* display: none; */
+    }
+    .c-showcase-info-left {
+        width: 70%;
+    }
+    .c-showcase-info-right {
+        padding: 1em 0;
+        align-items: flex-start;
+    }
+    .c-showcase-title {
+        margin: 0.25em 0;
+    }
+
 }
