--- a/app/styles/Works/works.css
+++ b/app/styles/Works/works.css
@@ -255,21 +255,25 @@
 }
 .b-scene-img-item {
     position: absolute;
-    width: 50vmin;
+    width: 60vmin;
+    height: 70vmin;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     transition: scale 1.6s ease;
+    object-fit: contain;
 }
 .b-scene-img-item[data-status="inactive"] {
-    /* display: none; */
+    display: none;
     scale: 0.6;
     opacity: 0.2;
+    transition: scale 1.6s ease;
 }
 .b-scene-img-item[data-status="active"] {
-    /* display: block; */
+    display: block;
     scale: 1;
     opacity: 1;
+    transition: scale 1.6s ease;
 }
 /* Behind the scene end */
 @media(max-width: 780px) {
