--- a/app/styles/Works/works.css
+++ b/app/styles/Works/works.css
@@ -4,6 +4,11 @@
     --transition-quart: all 0.6s cubic-bezier(0.76, 0.00, 0.24, 1); 
 }
 
+::selection {
+    background: black;
+    color: white;
+}
+
 /* Works Nav */
 .works-nav {
     position: fixed;
@@ -179,6 +184,7 @@
 .b-scene {
     padding: 2rem var(--side-padding) 2rem var(--side-padding);
     font-size: 1rem;
+   border: 1px green solid;
 }
 .b-scene-border {
     border-top: 1px #000 solid;
@@ -189,10 +195,10 @@
     position: relative;
     padding: 2em 0 2em 0;
     height: 100vh;  
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 .b-scene-title {
-    z-index: 200;
+    z-index: -1;
     background: rgba(255, 255, 255, 0.01);
 }
 .b-scene-title > h1 {
@@ -240,41 +246,287 @@
     display: none;
 }
 .b-scene-img-container {
-    height: 100%;
-    width: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 10;
-}
-.b-scene-img-inner-container {
-    position: relative;
     height: 100%;
     width: 100%;
-    cursor: none;
-}
-.b-scene-img-item {
+    
+    z-index: 0;
+    transition: all 0.3s ease;
+    touch-action: none;
+    overflow: hidden;
+    }
+.b-scene-img-wrapper {
     position: absolute;
-    width: 60vmin;
-    height: 70vmin;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
-    transition: scale 1.6s ease;
-    object-fit: contain;
+    width: 320em;
+    height: 200em;
+    transform: translate(-50%, -50%);
+    z-index: 100;
+    /* cursor: pointer; */
+    touch-action: none;
+    transition: transform 1.2s cubic-bezier(0.34, 1.56, 0.64, 1);
 }
-.b-scene-img-item[data-status="inactive"] {
-    display: none;
-    scale: 0.6;
-    opacity: 0.2;
-    transition: scale 1.6s ease;
+.b-scene-img-inner-wrapper {
+    /* position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 320em;
+    height: 200em;
+    transform: translate(-50%, -50%);
+    z-index: 999;
+    cursor: pointer;
+    touch-action: none;
+    background: red;
+    transition: transform 1.2s cubic-bezier(0.34, 1.56, 0.64, 1); */
 }
-.b-scene-img-item[data-status="active"] {
-    display: block;
-    scale: 1;
-    opacity: 1;
-    transition: scale 1.6s ease;
+.b-scene-img-frame {
+    position: absolute;
 }
+/* ACTUAL PAGE TEST */
+.b-scene-img-frame:nth-child(1) {
+    top: 35em;
+    left: 60em;
+}
+.b-scene-img-frame:nth-child(2) {
+    top: 25em;
+    left: 120em;
+}
+.b-scene-img-frame:nth-child(3) {
+    top: 40em;
+    left: 165em;
+}
+.b-scene-img-frame:nth-child(4) {
+    top: 35em;
+    left: 240em;
+}
+.b-scene-img-frame:nth-child(5) {
+    top: 85em;
+    left: 50em;
+}
+.b-scene-img-frame:nth-child(6) {
+    top: 70em;
+    left: 105em;
+}
+.b-scene-img-frame:nth-child(7) {
+    top: 95em;
+    left: 155em;
+}
+.b-scene-img-frame:nth-child(8) {
+    top: 65em;
+    left: 205em;
+}
+.b-scene-img-frame:nth-child(9) {
+    top: 110em;
+    left: 80em;
+}
+.b-scene-img-frame:nth-child(10) {
+    top: 150em;
+    left: 120em;
+}
+.b-scene-img-frame:nth-child(11) {
+    top: 135em;
+    left: 190em;
+}
+.b-scene-img-frame:nth-child(12) {
+    top: 110em;
+    left: 235em;
+}
+/*  */
+.b-scene-img-frame-figure {
+    position: relative;
+    overflow: hidden;
+}
+.b-scene-img-frame:nth-child(1) .b-scene-img-frame-figure {
+    width: 20em;
+    height: 25em;
+}
+.b-scene-img-frame:nth-child(2) .b-scene-img-frame-figure {
+    width: 20em;
+    height: 30em;
+}
+.b-scene-img-frame:nth-child(3) .b-scene-img-frame-figure {
+    width: 30em;
+    height: 30em;
+}
+.b-scene-img-frame:nth-child(4) .b-scene-img-frame-figure {
+    width: 25em;
+    height: 30em;
+}
+.b-scene-img-frame:nth-child(5) .b-scene-img-frame-figure {
+    width: 20em;
+    height: 30em;
+}
+.b-scene-img-frame:nth-child(6) .b-scene-img-frame-figure {
+    width: 25em;
+    height: 30em;
+}
+.b-scene-img-frame:nth-child(7) .b-scene-img-frame-figure {
+    width: 40em;
+    height: 30em;
+}
+.b-scene-img-frame:nth-child(8) .b-scene-img-frame-figure {
+    width: 20em;
+    height: 30em;
+}
+.b-scene-img-frame:nth-child(9) .b-scene-img-frame-figure {
+    width: 35em;
+    height: 30em;
+}
+.b-scene-img-frame:nth-child(10) .b-scene-img-frame-figure {
+    width: 20em;
+    height: 25em;
+}
+.b-scene-img-frame:nth-child(11) .b-scene-img-frame-figure {
+    width: 25em;
+    height: 30em;
+}
+.b-scene-img-frame:nth-child(12) .b-scene-img-frame-figure {
+    width: 35em;
+    height: 30em;
+}
+
+/*  */
+/* ACTUAL PAGE TEST END */
+
+/* Testing new code */
+.app {
+}
+.hero {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100vw;
+   height: 100vh;
+   z-index: -1;
+}
+.hero-wrapper {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 320em;
+    height: 200em;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    cursor: pointer;
+    touch-action: none;
+    transition: transform 1.2s cubic-bezier(0.34, 1.56, 0.64, 1);
+}
+/* .hero-inner {
+    height: 100%;
+    width: 100%;
+    position: relative;
+} */
+.hero-frame {
+    position: absolute;
+    border: 1px red solid;
+}
+/* nth children */
+.hero-frame:nth-child(1) {
+    top: 35em;
+    left: 60em;
+}
+.hero-frame:nth-child(2) {
+    top: 25em;
+    left: 120em;
+}
+.hero-frame:nth-child(3) {
+    top: 40em;
+    left: 165em;
+}
+.hero-frame:nth-child(4) {
+    top: 35em;
+    left: 240em;
+}
+.hero-frame:nth-child(5) {
+    top: 85em;
+    left: 50em;
+}
+.hero-frame:nth-child(6) {
+    top: 70em;
+    left: 105em;
+}
+.hero-frame:nth-child(7) {
+    top: 95em;
+    left: 155em;
+}
+.hero-frame:nth-child(8) {
+    top: 65em;
+    left: 205em;
+}
+.hero-frame:nth-child(9) {
+    top: 110em;
+    left: 80em;
+}
+.hero-frame:nth-child(10) {
+    top: 150em;
+    left: 120em;
+}
+.hero-frame:nth-child(11) {
+    top: 135em;
+    left: 190em;
+}
+.hero-frame:nth-child(12) {
+    top: 110em;
+    left: 235em;
+}
+/* nth children end */
+.hero-frame-figure {
+    position: relative;
+    overflow: hidden;
+}
+.hero-frame:nth-child(1) .hero-frame-figure {
+    width: 20em;
+    height: 25em;
+}
+.hero-frame:nth-child(2) .hero-frame-figure {
+    width: 20em;
+    height: 30em;
+}
+.hero-frame:nth-child(3) .hero-frame-figure {
+    width: 30em;
+    height: 30em;
+}
+.hero-frame:nth-child(4) .hero-frame-figure {
+    width: 25em;
+    height: 30em;
+}
+.hero-frame:nth-child(5) .hero-frame-figure {
+    width: 20em;
+    height: 30em;
+}
+.hero-frame:nth-child(6) .hero-frame-figure {
+    width: 25em;
+    height: 30em;
+}
+.hero-frame:nth-child(7) .hero-frame-figure {
+    width: 40em;
+    height: 30em;
+}
+.hero-frame:nth-child(8) .hero-frame-figure {
+    width: 20em;
+    height: 30em;
+}
+.hero-frame:nth-child(9) .hero-frame-figure {
+    width: 35em;
+    height: 30em;
+}
+.hero-frame:nth-child(10) .hero-frame-figure {
+    width: 20em;
+    height: 25em;
+}
+.hero-frame:nth-child(11) .hero-frame-figure {
+    width: 25em;
+    height: 30em;
+}
+.hero-frame:nth-child(12) .hero-frame-figure {
+    width: 35em;
+    height: 30em;
+}
+
+/* Testing new code end */
 /* Behind the scene end */
 @media(max-width: 780px) {
     .work {
@@ -382,4 +634,143 @@
     /* Works Nav End */
     /* Works Child End */
 
+}
+
+
+
+
+/* Drag */
+.frame-X {
+    /* position: relative; */
+    height: 100vh;
+    width: 100vw;
+    z-index: -1;
+}
+.frame-A {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+.frame-B {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 200em;
+    width: 320em;
+    z-index: 20;
+
+    cursor: pointer;
+    touch-action: none;
+    transition: transform 1.2s cubic-bezier(0.34, 1.56, 0.64, 1);
+    overflow: hidden;
+}
+.img-frame {
+    position: absolute;
+}
+.img-frame:nth-child(1) {
+    top: 35em;
+    left: 60em;
+}
+.img-frame:nth-child(2) {
+    top: 25em;
+    left: 120em;
+}
+.img-frame:nth-child(3) {
+    top: 40em;
+    left: 165em;
+}
+.img-frame:nth-child(4) {
+    top: 35em;
+    left: 240em;
+}
+.img-frame:nth-child(5) {
+    top: 85em;
+    left: 50em;
+}
+.img-frame:nth-child(6) {
+    top: 70em;
+    left: 105em;
+}
+.img-frame:nth-child(7) {
+    top: 95em;
+    left: 155em;
+}
+.img-frame:nth-child(8) {
+    top: 65em;
+    left: 205em;
+}
+.img-frame:nth-child(9) {
+    top: 110em;
+    left: 80em;
+}
+.img-frame:nth-child(10) {
+    top: 150em;
+    left: 120em;
+}
+.img-frame:nth-child(11) {
+    top: 135em;
+    left: 190em;
+}
+.img-frame:nth-child(12) {
+    top: 110em;
+    left: 235em;
+}
+
+/*  */
+.img-frame-figure {
+    position: relative;
+    overflow: hidden;
+}
+.img-frame:nth-child(1) .img-frame-figure {
+    width: 20em;
+    height: 25em;
+}
+.img-frame:nth-child(2) .img-frame-figure{
+    width: 20em;
+    height: 30em;
+}
+.img-frame:nth-child(3) .img-frame-figure{
+    width: 30em;
+    height: 30em;
+}
+.img-frame:nth-child(4) .img-frame-figure{
+    width: 25em;
+    height: 30em;
+}
+.img-frame:nth-child(5) .img-frame-figure{
+    width: 20em;
+    height: 30em;
+}
+.img-frame:nth-child(6) .img-frame-figure{
+    width: 25em;
+    height: 30em;
+}
+.img-frame:nth-child(7) .img-frame-figure{
+    width: 40em;
+    height: 30em;
+}
+.img-frame:nth-child(8) .img-frame-figure{
+    width: 20em;
+    height: 30em;
+}
+.img-frame:nth-child(9) .img-frame-figure{
+    width: 35em;
+    height: 30em;
+}
+.img-frame:nth-child(10) .img-frame-figure{
+    width: 20em;
+    height: 25em;
+}
+.img-frame:nth-child(11) .img-frame-figure{
+    width: 25em;
+    height: 30em;
+}
+.img-frame:nth-child(12) .img-frame-figure{
+    width: 35em;
+    height: 30em;
 }
