--- a/app/styles/Works/works.css
+++ b/app/styles/Works/works.css
@@ -184,7 +184,6 @@
 .b-scene {
     padding: 2rem var(--side-padding) 2rem var(--side-padding);
     font-size: 1rem;
-   border: 1px green solid;
 }
 .b-scene-border {
     border-top: 1px #000 solid;
@@ -198,8 +197,12 @@
     /* overflow: hidden; */
 }
 .b-scene-title {
-    z-index: -1;
+    z-index: 10;
     background: rgba(255, 255, 255, 0.01);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .b-scene-title > h1 {
     text-align: center;
@@ -213,6 +216,7 @@
     position: relative;
     transition: var(--transition-quint);
     z-index: 10;
+    width: 96%;
 }
 .b-scene-cta::after {
     content: '';
@@ -640,6 +644,30 @@
 
 
 /* Drag */
+.b-scene-frame {
+    height: 60em;
+    width: 100vw;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+
+    margin: 2em 0;
+}
+.b-scene-inner-frame {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    z-index: 1;
+    height: 100%;
+    width: 96%;
+    border-top: 1px #000 solid;
+    border-bottom: 1px #000 solid;
+    position: relative;
+}
 .frame-X {
     /* position: relative; */
     height: 100vh;
@@ -651,8 +679,9 @@
     width: 100%;
     overflow: hidden;
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: -1;
 }
 .frame-B {
@@ -675,6 +704,7 @@
 .img-frame:nth-child(1) {
     top: 35em;
     left: 60em;
+    border: 1px red solid;
 }
 .img-frame:nth-child(2) {
     top: 25em;
@@ -693,20 +723,20 @@
     left: 50em;
 }
 .img-frame:nth-child(6) {
-    top: 70em;
-    left: 105em;
+    top: 75em;
+    left: 115em;
 }
 .img-frame:nth-child(7) {
-    top: 95em;
-    left: 155em;
+    top: 103em;
+    left: 180em;
 }
 .img-frame:nth-child(8) {
-    top: 65em;
-    left: 205em;
+    top: 75em;
+    left: 185em;
 }
 .img-frame:nth-child(9) {
     top: 110em;
-    left: 80em;
+    left: 125em;
 }
 .img-frame:nth-child(10) {
     top: 150em;
@@ -748,19 +778,19 @@
 }
 .img-frame:nth-child(6) .img-frame-figure{
     width: 25em;
-    height: 30em;
+    height: 20em;
 }
 .img-frame:nth-child(7) .img-frame-figure{
-    width: 40em;
-    height: 30em;
+    width: 23.2em;
+    height: 22.5em;
 }
 .img-frame:nth-child(8) .img-frame-figure{
     width: 20em;
-    height: 30em;
+    height: 20em;
 }
 .img-frame:nth-child(9) .img-frame-figure{
-    width: 35em;
-    height: 30em;
+    width: 23.2em;
+    height: 15em;
 }
 .img-frame:nth-child(10) .img-frame-figure{
     width: 20em;
