--- a/app/styles/Works/works.css
+++ b/app/styles/Works/works.css
@@ -194,7 +194,6 @@
     position: relative;
     padding: 2em 0 2em 0;
     height: 100vh;  
-    /* overflow: hidden; */
 }
 .b-scene-title {
     z-index: 10;
@@ -207,6 +206,7 @@
 .b-scene-title > h1 {
     text-align: center;
     font-size: 6.25em;
+    touch-action: none;
 }
 .b-scene-cta {
     border-bottom: 1px black solid;
