--- a/app/styles/Home/home.css
+++ b/app/styles/Home/home.css
@@ -60,8 +60,6 @@
 .home-brief {
     font-size: 1rem;
     padding: 1.75rem var(--side-padding) 4rem var(--side-padding);
-    background: rgba(var(--white));
-    color: rgba(var(--black));
 }
 .home-brief-wrapper {
     display: flex;
@@ -236,10 +234,13 @@
     padding: 2rem var(--side-padding) 2rem var(--side-padding);
     font-size: 1rem;
     width: 100%;
+    position: relative;
 }
 .c-showcase-border {
     border-top: 2px #000 solid;
     border-bottom: 2px #000 solid;
+    transition: all var(--transition-quint);
+    cursor: none;
 }
 .c-showcase-title-wrapper {
     margin-top: 3em;
@@ -258,12 +259,12 @@
     top: 50%;
     transform: translateY(100%);
     transition: var(--transition-quint);
-    opacity: 0;
+    opacity: 1;
 }
 .c-showcase-title-mid {
     position: relative;
     transition: var(--transition-quint);
-    opacity: 0;
+    opacity: 1;
 }
 .c-showcase-title-bottom {
     position: relative;
