--- a/app/styles/Works/works.css
+++ b/app/styles/Works/works.css
@@ -2,6 +2,7 @@
     --side-padding: 2rem;
     --transition-quint: all 0.6s cubic-bezier(0.85, 0, 0.15, 1);
     --transition-quart: all 0.6s cubic-bezier(0.76, 0.00, 0.24, 1); 
+    --new-transition: cubic-bezier(0.83, 0, 0.17, 1);
 }
 
 ::selection {
@@ -22,6 +23,13 @@
     padding: 1rem 0.5rem 1rem 0;
     font-size: 1rem;
     z-index: 200;
+    opacity: 1;
+    transition: all 0.3s var(--new-transition);
+}
+.works-nav.works-nav-hide {
+    bottom: -10%;
+    opacity: 0;
+    transition: all 0.6s var(--new-transition);
 }
 .works-nav-item {
     width: 33.33%;
