--- a/app/styles/Works/works.css
+++ b/app/styles/Works/works.css
@@ -20,13 +20,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 1.25rem 0;
+    padding: 1.25rem 1rem 1.25rem 0;
     font-size: 1rem;
     z-index: 200;
     opacity: 1;
     transition: all 0.3s var(--new-transition);
 
-    width: 450px;
+    width: 20.125em;
 }
 .works-nav.works-nav-hide {
     bottom: -10%;
