--- a/app/globals.css
+++ b/app/globals.css
@@ -515,7 +515,7 @@ h1,h2,h3,h4 {
   width: 33%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 .nav-mid-item {
   width: 25%;
@@ -523,6 +523,7 @@ h1,h2,h3,h4 {
   align-items: center;
   justify-content: center;
   transition: var(--transition-quint);
+
 }
 .nav-right {
   width: 33%;
