--- a/app/styles/Works/works.css
+++ b/app/styles/Works/works.css
@@ -579,6 +579,13 @@
     height: 30em;
 }
 
+
+.next-project-cta {
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 /* Testing new code end */
 /* Behind the scene end */
 
@@ -703,6 +710,11 @@
     }
     /* Works Nav End */
     /* Works Child End */
+
+    .next-project-cta {
+        margin-top: 1em;
+        font-size: 3rem;
+    }
 
 }
 
