works child title width update

--- a/app/styles/Works/works.css
+++ b/app/styles/Works/works.css
@@ -129,8 +129,10 @@
     z-index: 200;
 }
 .work-uid-hero-title > h1 {
+    width: 82%;
     color: #FFF;
     z-index: 10;
+    text-align: center;
 }
 /* hero end */
 
