--- a/app/styles/Works/works.css
+++ b/app/styles/Works/works.css
@@ -734,7 +734,7 @@
     justify-content: center;
     position: relative;
 
-    margin: 2em 0;
+    margin: 2em 0 0 0 0;
 }
 .b-scene-inner-frame {
     display: flex;
