--- a/app/styles/Home/home.css
+++ b/app/styles/Home/home.css
@@ -240,7 +240,7 @@
     border-top: 2px #000 solid;
     border-bottom: 2px #000 solid;
     transition: all var(--transition-quint);
-    cursor: none;
+    /* cursor: none; */
 }
 .c-showcase-title-wrapper {
     margin-top: 3em;
