--- a/app/globals.css
+++ b/app/globals.css
@@ -154,7 +154,8 @@
   font-size: var(--cta);
   color: black;
   padding: 0.6em 0.35em 0.6em 0.2em;
-  transition: var(--transition-quint);
+  /* transition: var(--transition-quint); */
+  transition: all 0.2s var(--quint);  
   transition-delay: 500ms;
   z-index: 100;
 }
@@ -168,14 +169,16 @@
   width: 0;
   background: var(--cta-anim-black);
   z-index: -1;
-  transition: var(--transition-quint);
+  /* transition: var(--transition-quint); */
+  transition: all 0.2s var(--quint);
   transition-delay: 500ms;
 }
 .cta:hover.cta::before {
   /* CTA BACKGROUND */
   width: 100%;
   height: 100%;
-  transition: var(--transition-quint);
+  /* transition: var(--transition-quint); */
+  transition: all 0.2s var(--quint);
 }
 .cta > p {
   position: relative;
@@ -188,30 +191,34 @@
   height: 1px;
   width: 0;
   background: var(--snow-bg);
-  transition: var(--transition-quart);
+  /* transition: var(--transition-quart); */
+  transition: all 0.2s var(--quint);
   /* transition-delay: 500ms; */
 }
 .cta:hover.cta > p::after {
   /* CTA UnderLine */
   width: 100%;
-  transition: var(--transition-quart);
+  /* transition: var(--transition-quart); */
+  transition: all 0.2s var(--quint);
   transition-delay: 200ms;
 }
 
 .cta:hover {
   color: #FFF;
   z-index: 200;
-  transition: var(--transition-quint);
+  /* transition: var(--transition-quint); */
+  transition: all 0.2s var(--quint);
 }
 .cta-arrow {
   position: relative;
-  background: var(--snow-bg);
-  transition: var(--transition-quart);
+  /* background: var(--snow-bg); */
+  /* transition: var(--transition-quart); */
+  transition: all 0.2s var(--quint);
   transform: translateX(-120%);
   transition-delay: 250ms;
 }
 .cta-arrow-A {
-  position: absolute;
+  /* position: absolute;
   height: 6px;
   width: 6px;
   border: 2px #FFF solid;
@@ -219,7 +226,7 @@
   border-left: none;
   top: -120%;
   right: 5%;
-  transform: rotate(45deg) translate(0%, -2%);
+  transform: rotate(45deg) translate(0%, -2%); */
 }
 .cta:hover .cta-arrow {
   transform: translateX(-10%);
@@ -237,14 +244,14 @@
   scale: 0;
   position: fixed;
   background-color: rgba(255, 255, 255, 1);
-  transition: scale 0.5s var(--quint);
+  transition: scale 0.2s var(--quint);
   pointer-events: none;
   z-index: 2000;
   transition-delay: 600ms;
 }
 .cursor-A.cursor-active {
   scale: 1;
-  transition: scale 0.5s var(--quint);
+  transition: scale 0.2s var(--quint);
   z-index: 200;
 }
 .cursor-A-bg-wrapper {
@@ -260,29 +267,34 @@
   height: 100%;
   width: 0;
   background: var(--black-bg);
-  transition: var(--transition-quint);
+  /* transition: var(--transition-quint); */
+  transition: all 0.2s var(--quint);
   z-index: -10;
   transition-delay: 300ms;
 }
 .cursor-A-bg.cursor-A-bg-active {
   width: 100%;
-  transition: var(--transition-quint);
+  /* transition: var(--transition-quint); */
+  transition: all 0.2s var(--quint);
   z-index: -10;
   transition-delay: 150ms;
 }
 .cursor-A-text-wrapper {
-  transition: var(--transition-quint);
+  /* transition: var(--transition-quint); */
+  transition: all 0.2s var(--quint);
   z-index: 500;
 }
 .cursor-A-text-wrapper > p {
   color: var(--cta-anim-black);
-  transition: var(--transition-quint);
+  /* transition: var(--transition-quint); */
+  transition: all 0.2s var(--quint);
   z-index: 500;
   transition-delay: 150ms;
 }
 .cursor-A-text-wrapper.cursor-A-text-active > p {
   color: var(--cta-txt-white);
-  transition: var(--transition-quint);
+  /* transition: var(--transition-quint); */
+  transition: all 0.2s var(--quint);
   z-index: 500;
   transition-delay: 150ms;
 }
@@ -301,12 +313,14 @@
   width: 0%;
   background: #FFF;
   z-index: 10;
-  transition: var(--transition-quint);
+  /* transition: var(--transition-quint); */
+  transition: all 0.2s var(--quint);
   transition-delay: 150ms;
 }
 .cursor-A-text.cursor-A-text-u-active {
   position: relative;
-  transition: var(--transition-quint);
+  /* transition: var(--transition-quint); */
+  transition: all 0.2s var(--quint);
 }
 .cursor-A-text.cursor-A-text-u-active::after {
   content: '';
@@ -317,7 +331,8 @@
   width: 100%;
   background: #FFF;
   z-index: 10;
-  transition: var(--transition-quart);
+  /* transition: var(--transition-quart); */
+  transition: all 0.2s var(--quint);
   transition-delay: 300ms;
 }
 .cursor-A-text-u-active {
@@ -330,11 +345,13 @@
   color: #FFF;
   position: relative;
   transform: translateX(-100%);
-  transition: var(--transition-quint);
+  /* transition: var(--transition-quint); */
+  transition: all 0.2s var(--quint);
 }
 .cursor-A-arrow.cursor-A-arrow-reveal {
   transform: translateX(0%);
-  transition: var(--transition-quint);
+  /* transition: var(--transition-quint); */
+  transition: all 0.2s var(--quint);
   transition-delay: 350ms;
 }
 /* Cursor-A End */
@@ -495,6 +512,9 @@ h1,h2,h3,h4 {
 
 
 /* Nav */
+.mobile-Nav {
+  display: none;
+}
 .nav {
   position: fixed;
   top: 0;
@@ -651,6 +671,14 @@ h1,h2,h3,h4 {
 
 /* media-query */
 @media(max-width: 780px) {
+  .mobile-Nav {
+    display: flex;
+    position: fixed;
+    bottom: 8%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 20;
+  }
   .nav {
     padding-top: 6em;
   }
