--- a/app/styles/Home/home.css
+++ b/app/styles/Home/home.css
@@ -116,27 +116,31 @@
     position: relative;
     width: 27%;
     height: 16.25em;
-    transition: var(--transition-quart);
+    /* transition: var(--transition-quart); */
+    transition: all 0.4s cubic-bezier(0.76, 0.00, 0.24, 1);
     transition-delay: 50ms;
 } 
 .fw-showcase-item.expand-fw-showcase-item{
     height: 28em;
     width: 45%;
-    transition: var(--transition-quart);  
+    /* transition: var(--transition-quart);   */
+    transition: all 0.4s cubic-bezier(0.76, 0.00, 0.24, 1);
     transition-delay: 50ms;
 }
 .fw-showcase-item-text-wrapper {
     position: absolute;
     bottom: -12%;
     color: rgba(var(--black));
-    transition: var(--transition-quint);
+    /* transition: var(--transition-quint); */
+    transition: all 0.4s cubic-bezier(0.76, 0.00, 0.24, 1);
     overflow: hidden;
 }
 .fw-showcase-item-text-inner-wrapper {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
-    transition: var(--transition-quint);
+    /* transition: var(--transition-quint); */
+    transition: all 0.4s cubic-bezier(0.76, 0.00, 0.24, 1);
     position: relative;
     transform: translateY(-100%);
 }
@@ -237,7 +241,7 @@
     position: relative;
 }
 .c-showcase-border {
-    border-top: 2px #000 solid;
+    /* border-top: 2px #000 solid; */
     border-bottom: 2px #000 solid;
     transition: all var(--transition-quint);
     /* cursor: none; */
