--- a/app/styles/Works/works.css
+++ b/app/styles/Works/works.css
@@ -147,11 +147,16 @@
     justify-content: space-between;
 }
 .work-brief-left {
-    width: 20%;
+    width: 50%;
 }
 .work-brief-right, .work-vision-right {
     width: 48.75%;
+
 }
+/* .work-vision-right {
+    width: 100%;
+    padding-top: 2em;
+} */
 .work-brief-right-top {
     width: 85%;
 }
@@ -184,10 +189,10 @@
     align-items: flex-start;
     justify-content: space-between;
     max-height: 60em;
+
 }
 .work-vision-left {
     width: 50%;
-    /* height: 50vh; */
 }
 .work-vision-left-wrapper {
     height: 100%;
@@ -337,6 +342,9 @@
     touch-action: none;
     background: red;
     transition: transform 1.2s cubic-bezier(0.34, 1.56, 0.64, 1); */
+}
+.img-frame {
+    transition: all 0.3s var(--new-transition);
 }
 .b-scene-img-frame {
     position: absolute;
@@ -784,7 +792,6 @@
 .img-frame:nth-child(1) {
     top: 35em;
     left: 60em;
-    border: 1px red solid;
 }
 .img-frame:nth-child(2) {
     top: 25em;
