--- a/app/globals.css
+++ b/app/globals.css
@@ -671,6 +671,7 @@ h1,h2,h3,h4 {
 
 /* media-query */
 @media(max-width: 780px) {
+  /*  */
   .mobile-Nav {
     display: flex;
     position: fixed;
