--- a/app/styles/Home/home.css
+++ b/app/styles/Home/home.css
@@ -252,9 +252,13 @@
     flex-direction: column;
     align-items: center;
 }
+.c-showcase-title-wrapper.mob {
+    display: none;
+}
 .c-showcase-title-wrapper > div > h1 {
     letter-spacing: -0.16669rem;
 }
+
 
 
 /* C-Showcase Title Anim */
@@ -377,10 +381,14 @@
         font-size: 3rem;
         padding: 5rem 1rem 5rem 1rem;
     }
+    .c-showcase-title-wrapper.mob {
+        display: flex;
+    }
     .c-showcase-title-wrapper {
         width: 100%;
         padding: 0 1rem;
         text-align: left;
+        display: none;
     }
     .c-showcase-title-wrapper > div > h1 {
         letter-spacing: -0.55rem;
