--- a/app/globals.css
+++ b/app/globals.css
@@ -688,6 +688,7 @@ h1,h2,h3,h4 {
     left: 50%;
     transform: translateX(-50%);
     z-index: 20;
+    transition: all 0.5s var(--quint);
   }
   .nav {
     padding-top: 6em;
@@ -787,7 +788,7 @@ h1,h2,h3,h4 {
     width: 30%;
   }
   .footer-right {
-    width: 100%;
+    width: 90%;
   }
   /* Footer End */
 }
