--- a/app/styles/Works/works.css
+++ b/app/styles/Works/works.css
@@ -53,6 +53,9 @@
     justify-content: center;
     padding: 1em 0;
 }
+.work-title > h1 {
+    /* letter-spacing: -0.001em !important; */
+}
 .work-showcase-wrapper {
     display: flex;
     flex-wrap: wrap;
@@ -644,7 +647,14 @@
         display: none;
     }
     .work-title {
-        padding: 4em 0 2em 0;
+        justify-content: flex-start;
+        padding: 1em 0 0em 0;
+        display: block;
+    }
+    .work-title > h1 {
+        position: relative;
+        transform: translateY(50%);
+        margin-top: 1em;
     }
 
     /* Works Child */
